<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.erand.alc4phase1.MyProfile">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/profile"
        android:src="@drawable/propic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            style="@style/TextDesign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/track" />

        <TextView
            style="@style/TextDesign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/country" />

        <TextView
            style="@style/TextDesign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email" />

        <TextView
            style="@style/TextDesign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phone_number" />

        <TextView
            style="@style/TextDesign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/slack_username" />

    </LinearLayout>

</RelativeLayout>
